--- a/rails-board-angular/src/app/home/home.component.html
+++ b/rails-board-angular/src/app/home/home.component.html
@@ -1,8 +1,6 @@
 <div class="row">
   <div class="col s12">
     <h1>Welcome</h1>
-    <p>
-      Add stream of Jobs here.
-    </p>
+    <app-job></app-job>
   </div>
 </div>
