form without ngmodel

--- a/rails-board-angular/src/app/profile/profile.component.html
+++ b/rails-board-angular/src/app/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div class="row">
 
-  <div class="col l8 s12 offset-l2">
+  <div class="col l4 s12"> <!--<div class="col l8 s12 offset-l2">-->
 
     <div class="card blue-grey lighten-5 z-depth-4" style="margin-top: 5em">
 
@@ -38,4 +38,5 @@
     </div>
 
   </div>
+  <app-job-form></app-job-form>
 </div>
