--- a/rails-board-angular/src/app/toolbar/toolbar.component.html
+++ b/rails-board-angular/src/app/toolbar/toolbar.component.html
@@ -2,7 +2,7 @@
 
   <nav  role="navigation">
 
-    <div class="nav-wrapper blue ">
+    <div class="nav-wrapper #ee6e73 ">
       <a [routerLink]="['']" id="logo-container" class="brand-logo">Rails Board</a>
 
       <ul class="right hide-on-med-and-down">
